compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__bit_array_segment_size.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 95
expression: "let x = <<1:8-size(5)>> x"
snapshot_kind: text
---
----- SOURCE CODE
let x = <<1:8-size(5)>> x

----- ERROR
error: Invalid bit array segment
  ┌─ /src/one/two.gleam:1:15
  │
1 │ let x = <<1:8-size(5)>> x
  │               ^^^^^^^ This is an extra size specifier

Hint: This segment already has a size.
See: https://tour.gleam.run/data-types/bit-arrays/
